--- a/public/locales/en/home.json
+++ b/public/locales/en/home.json
@@ -61,7 +61,8 @@
     "title": "Contact",
     "getInTouch": "Get in Touch",
     "address": "Address",
-    "addressText": "Levent, Istanbul, Turkey",
+    "addressText": "Incek, Turkan Soray Cd. No: 4, 06830 Golbasi/Ankara",
+    "findUs": "Find Us",
     "phone": "Phone",
     "email": "Email",
     "name": "Your Name",
