--- a/public/locales/tr/home.json
+++ b/public/locales/tr/home.json
@@ -76,7 +76,8 @@
     "title": "İletişim",
     "getInTouch": "İletişime Geçin",
     "address": "Adres",
-    "addressText": "Levent, İstanbul, Türkiye",
+    "addressText": "İncek, Türkan Şoray Cd. No: 4, 06830 Gölbaşı/Ankara",
+    "findUs": "Bizi Bulun",
     "phone": "Telefon",
     "email": "E-posta",
     "name": "Adınız",
